Add DHCP over FireWire 1394 (RFC 2855) and InfiniBand (RFC 4390) support.
We should add support for DUIDs (RFC4361) as well.

dhcpcd-3.0.11
Don't try to send messages when we infinite leasetime and the interface
fd is closed.

dhcpcd-3.0.10
Only write a new ntp.conf if any of our servers are not present in it.
We now work with SIGCHLD and call wait so that we don't leave any
zombies lying around.
For infinite timeout, we now resent the last request at +TIMEOUT_MINI
intervals until TIMEOUT_MINI_INF is reached, thanks to siadak.
We now return a non zero exit code on SIGTERM and SIGINT if we have not
forked into the background.
When NIS and/or NTP servers are updated, we restart the service for them
if we can.

dhcpcd-3.0.9
Add static routes before any default routes as a router may require a host
route in the static routes.

dhcpcd-3.0.8
Fix arp checking.
linux header asm/types.h doesn't work with c99 which is just wrong,
so it's back to gnu99 until a working linux version is released.

dhcpcd-3.0.7
Allow Linux to use Token Ring again as Linux does not have any more hardware
specific code. BPF needs a patch for Token Ring support.
Dawin is now reported to work. NetBSD and OpenBSD should work also.
cleanmetas now inserts a \ when it finds a ' so we get the proper
values in our .info files when read by a shell.
Add new CFLAGS to ensure that the code quality is good.
Use const more in public functions.

dhcpcd-3.0.6
Don't set the broadcast flag anymore as all BPF and Linux sockets should be
able to unicast correctly.

dhcpcd-3.0.5
Fix yp.conf creation.

dhcpcd-3.0.4
Fix netmask thanks to Marc Duponcheel.
Send the hostname by default unless null, (none) or localhost.
This can be overridden by using a an empty option for -h (-h '').

dhcpcd-3.0.3
NIS setup (yp.conf / domainname) works again.
Send hostname/fqdn in DISCOVER and INFORM messages too.
Add more debug messages.
Fix writing to resolv.conf when resolvconf not present.